2006-05-21  Johan Bilien  <johan.bilien@nokia.com>

	* hildon-widgets/hildon-window.c
	(hildon_window_remove_toolbar)
	(hildon_window_size_expose): Removed the
	gtk_widget_queue_draw_area call from this functions, because
	sometimes the event is not managed in the proper order.

	(hildon_window_size_allocate): Added the
	gtk_widget_queue_draw_area call in case the number of the toolbars
	has changed, this way we insure an expose event for the proper
	region will come after the change of the toolbars.

	NB#26366

2006-05-21  Johan Bilien  <johan.bilien@nokia.com>
	
	* hildon-widgets/hildon-window.c:
	(hildon_window_size_allocate): Now the window uses all the space
	when its state is fullscreen, we avoid to subtract the top and
	bottom borders if the window state is fullscreen.
	
	NB#28925

2006-05-18  Tapani Palli <tapani.palli@nokia.com>

	* hildon-widgets/hildon-time-editor.c: block signal handler for
	hildon_time_editor_inserted_text, null check for entry widget in
	highlight_callback. Fixes NB#28679

2006-05-16  Luc Pionchon  <luc.pionchon@nokia.com>

	* hildon-widgets/gtk-infoprint.c (gtk_confirmation_banner): added
	bold markup for backward compatibility. NB#28370


2006-05-15  Luc Pionchon  <luc.pionchon@nokia.com>

	* configure.ac: 0.12.15


2006-05-15  Johan Bilien  <johan.bilien@nokia.com>

	* hildon-widgets/hildon-window.[ch]:
	  - Added clipboad_operation signal used by osso-browser to receive
	    clipborad operations from hildon-input-method
	  - Trigger this signal when we receive an clipboard X message
	    from HIM. related to NB#25502

2006-05-11  Luc Pionchon  <luc.pionchon@nokia.com>

	* hildon-widgets/hildon-caption.c
	(hildon_caption_set_label_alignment)
	(hildon_caption_get_label_alignment): added gtk-doc "Since" marker

	* doc/hildon-libs-docs.sgml: added index for 0.12.0 new symbols


2006-05-10  Luc Pionchon  <luc.pionchon@nokia.com>

	* hildon-widgets/hildon-time-editor.c:
	(hildon_time_editor_set_ticks) removed block signal handler for