@@ -1,3 +1,9 @@
+2006-05-21  Luc Pionchon  <luc.pionchon@nokia.com>
+
+	* hildon-widgets/gtk-intoprint.c (find_banner_for_parent): Added
+	check for "is-timed" property. NB#26546
+
+
 2006-05-21  Johan Bilien  <johan.bilien@nokia.com>
 
 	* hildon-widgets/hildon-window.c
